feat:增加关卡黑名单